--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import './styles/fonts.css';
+@import "./styles/_reset.css";
+@import './styles/_variables.css';
+
+body {
+  font-family: 'Onest', sans-serif;
+  margin: 0;
+}
