Create parts of the home. The Banner and card effect scroll.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
 @import './styles/fonts.css';
 @import "./styles/_reset.css";
 @import './styles/_variables.css';
+@import "./styles/_utilities.css";
 
 body {
+  background-color: var(--color-black);
   font-family: 'Onest', sans-serif;
   margin: 0;
 }
