--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -1,12 +1,18 @@
+:host(.wrapper) {
+  display: block;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-block: 1.5rem;
 }
 
 .header-left {
   display: flex;
   align-items: center;
+  gap: 1rem;
 }
 
 .header-right {
@@ -30,5 +36,19 @@
     &:hover {
       color: var(--color-primary);
     }
+  }
+}
+
+.logo {
+  --size: 7rem;
+  width: var(--size);
+  margin: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  & img {
+    filter: invert(1);
   }
 }
