--- a/src/app/home/ui/home.component.css
+++ b/src/app/home/ui/home.component.css
@@ -77,3 +77,52 @@
     transform: scale(calc(1.1 - calc(0.1 * var(--reverse-index))));
   }
 }
+
+.flow {
+  --flow-space: 2rem;
+}
+
+.texts {
+  text-align: center;
+}
+.grid-cards {
+  & .clients-card {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 14.75rem;
+    border-radius: 1.25rem;
+
+    & h3 {
+      position: relative;
+      z-index: 3;
+    }
+
+    & .logo-and-bg-video {
+      position: absolute;
+      z-index: 1;
+      inset: 0;
+      & video {
+        width: 100%;
+        height: 100%;
+        border-radius: 1.25rem;
+        object-fit: cover;
+        background-repeat: no-repeat;
+      }
+    }
+  }
+
+  & .clients-overlay{
+    position: absolute;
+    background-color: var(--color-primary);
+    inset: 0;
+    z-index: 2;
+    border-radius: 1.25rem;
+    transition: opacity var(--hover-duration) var(--hover-timing);
+  }
+
+  & .clients-card:hover .clients-overlay {
+    opacity: 0;
+  }
+}
