--- a/src/app/session/components/login/login.component.html
+++ b/src/app/session/components/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="container-1">
+
+  <h1>Inicia Sesión</h1>
+
+  <form action="#" method="POST" class="signin">
+
+    <div class="signin-dato">
+      <label for="usuario">Usuario</label>
+      <input type="email" id="usuario" name="usuario" placeholder="Ingrese su correo electrónico" required>
+    </div>
+
+    <div class="signin-dato">
+      <label for="contraseña">Contraseña</label>
+      <input type="password" id="contraseña" name="contraseña" placeholder="Ingrese su contraseña" required>
+    </div>
+
+    <button class="boton-1">
+      <span class="texto-boton">Iniciar sesión →</span>
+    </button>
+
+    <p>¿No tienes una cuenta? <a routerLink="/session/register" class="link">Registrate</a></p>
+
+  </form>
+
+</div>
