--- a/src/styles/_reset.css
+++ b/src/styles/_reset.css
@@ -12,9 +12,9 @@ html {
 }
 
 
-body, h1, h2, h3, h4, p,
+body, h1, h2, h3, h4, h5, h6, p,
 figure, blockquote, dl, dd {
-  margin-block-end: 0;
+  margin-block-start: 0;
   color: var(--color-secondary);
 }
 
