--- a/src/app/list-cars/components/popup-car/popup-car.component.html
+++ b/src/app/list-cars/components/popup-car/popup-car.component.html
@@ -53,7 +53,7 @@
         <div class="referencia">
           <div class="texts">
             <h6>Kilometros ilimitados</h6>
-            <p>Todos os kilómetros están incluidos en el precio.</p>
+            <p>Todos los kilómetros están incluidos en el precio.</p>
           </div>
           <div class="meta">
             <strong>Incluido</strong>
