--- a/src/app/checkout/ui/checkout-page.component.html
+++ b/src/app/checkout/ui/checkout-page.component.html
@@ -1,36 +1,52 @@
 <div class="container">
-  <form class="formulario">
+  <form class="formulario flow">
     <h2>¿Quién Conducirá?</h2>
-    <h3>En caso de requerir Factura</h3>
-    <label for="empresa">Razón Social</label>
-    <input type="text" id="empresa" name="empresa" placeholder="Ingrese Nombre de la empresa según Sunat">
+    <!-- <h3>En caso de requerir Factura</h3> -->
 
-    <label for="ruc">RUC</label>
-    <input class="ruc" type="number" min="10000000000" max="20999999999" step="1" id="ruc" name="ruc"
-      placeholder="Ingrese RUC de la empresa">
+    <!-- <div class="row">
+      <label for="empresa">Razón Social</label>
+      <input class="input-custom" type="text" id="empresa" name="empresa"
+        placeholder="Ingrese Nombre de la empresa según Sunat">
+    </div>
+
+    <div class="row">
+      <label for="ruc">RUC</label>
+      <input class="input-custom" type="number" min="10000000000" max="20999999999" step="1" id="ruc" name="ruc"
+        placeholder="Ingrese RUC de la empresa">
+    </div> -->
 
     <h3>Datos obligatorios</h3>
 
-    <label for="nombre">Nombres</label>
-    <input type="text" id="nombre" name="nombre" placeholder="Nombres">
+    <div class="row">
+      <label for="nombre">Nombres</label>
+      <input class="input-custom" type="text" id="nombre" name="nombre" placeholder="Nombres">
+    </div>
 
-    <label for="apellido">Apellidos</label>
-    <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos">
+    <div class="row">
+      <label for="apellido">Apellidos</label>
+      <input class="input-custom" type="text" id="apellidos" name="apellidos" placeholder="Apellidos">
+    </div>
 
-    <label for="correo">Correo Electrónico</label>
-    <input type="email" id="correo" name="correo" placeholder="Correo Electrónico">
+    <div class="row">
+      <label for="correo">Correo Electrónico</label>
+      <input class="input-custom" type="email" id="correo" name="correo" placeholder="Correo Electrónico">
+    </div>
 
-    <label for="direccion">Dirección de Entrega</label>
-    <input type="text" id="direccion" name="direccion"
-      placeholder="Ingrese dirección donde se hará entrega del vehiculo">
+    <div class="row">
+      <label for="direccion">Dirección de Entrega</label>
+      <input class="input-custom" type="text" id="direccion" name="direccion"
+        placeholder="Ingrese dirección donde se hará entrega del vehiculo">
+    </div>
 
-    <label for="celular">Celular (WhatsApp)</label>
-    <input type="tel" id="celular" name="celular" placeholder="Número de celular">
+    <div class="row">
+      <label for="celular">Celular</label>
+      <input class="input-custom" type="tel" id="celular" name="celular" placeholder="Número de celular">
+    </div>
 
-    <div class="edad">
+    <!-- <div class="row">
       <input type="checkbox" class="edad-check" id="edad-check" name="edad-check">
       <label for="edad-check">Tengo 18 años o más</label>
-    </div>
+    </div> -->
 
   </form>
 
