--- a/src/app/session/components/register/register.component.css
+++ b/src/app/session/components/register/register.component.css
@@ -2,106 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: calc(100vh - 7rem);
 }
 
-.container-1 {
-  width: 100%;
-  max-width: 450px;
-  padding: 60px 54px;
-  border: 1px solid #fbfbfb;
-  background-color: #111111;
-  border-radius: 12px;
-  text-align: center;
-}
-
-.container-2{
-  display: flex;
-  justify-content: space-between;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-.signin-dato {
-  margin-bottom: 15px;
-  text-align: left;
-  width: 100%;
-}
-
-.signin-dato label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.signin-dato input {
-  width: 100%;
-  padding: 10px;
-  border: 2px solid #fff;
-  border-radius: 50px;
-  outline: none;
-  transition: border-color 0.5s;
-  width: 96%;
-  background-color: transparent;
-}
-
-.signin-dato input:focus {
-  border-color: #ff7020;
-}
-
-.record label{
-  transition: color 0.5s ease;
-}
-
-.record label:hover,.link:hover{
-  color: #ff7020;
-}
-
-.record-check:checked {
-  accent-color: #ff7020;
-}
-
-.link{
-  text-decoration: none;
-  color: #fbfbfb;
-  transition: color 0.5s ease;
-}
-
-.boton-1{
-  position: relative;
-  padding: 12px 36px;
-  font-size: 16px;
-  color: #000;
-  background: #fbfbfb;
-  border: none;
-  border-radius: 50px;
-  overflow: hidden;
-  z-index: 0;
-  transition: color 0.5s ease;
-  cursor: pointer;
-}
-
-.boton-1::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: #ff7020;
-  z-index: -1;
-  transition: left 0.5s ease;
-  border-radius: 50px
-}
-
-.texto-boton{
-  position: relative;
-  z-index: 1;
-}
-
-.boton-1:hover::before{
-  left: 0;
-}
-
-.boton-1:hover{
-  color: #fbfbfb;
+.flow {
+  --flow-space: 2rem
 }
