--- a/src/app/session/ui/layout/layout.component.css
+++ b/src/app/session/ui/layout/layout.component.css
@@ -1,11 +1,11 @@
 :host {
   display: block;
   position: relative;
-  height: calc(100vh - 6.5rem);
+  height: 100vh;
 
   &::after {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 11.5rem);
     content: "";
     position: absolute;
     inset: 0;
