--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -2,6 +2,15 @@
   --color-primary: oklch(70.98% 0.193 44.42);
   --color-secondary: oklch(98.81% 0 0);
   --color-black: oklch(17.76% 0 0);
+  --color-gray: oklch(83.77% 0.0083 286.22);
+
+
+  /* Paddings */
+  --padding-block-form: clamp(2.5rem, 1.9318rem + 2.0202vw, 3.75rem);
+  --padding-inline-form: clamp(2.1875rem, 1.6193rem + 2.0202vw, 3.4375rem);
+
+  /* Borders radious input */
+  --border-input: 1.6rem;
 
   /* Font Size */
   --fs-title-banner: clamp(2.5rem, 1.3636rem + 4.0404vw, 5rem);
@@ -17,9 +26,9 @@
   --spring: cubic-bezier(0.17, 0.67, 0.83, 0.67); /* Efecto muelle */
 
   /* Durations */
-  --duration-short: 0.3s;
-  --duration-medium: 0.5s;
-  --duration-long: 0.8s;
+  --duration-short: 200ms;
+  --duration-medium: 400ms;
+  --duration-long: 600ms;
 
   /* Popup specific */
   --popup-timing: var(--ease-out);
