Create section Testimonials

--- a/src/app/contact/ui/contact-page/contact-page.component.html
+++ b/src/app/contact/ui/contact-page/contact-page.component.html
@@ -1,1 +1,39 @@
-<p>contact-page works!</p>
+<section class="page-contact">
+  <div class="wrapper container">
+    <div class="container-left">
+      <h2 class="title">¿Tienes alguna duda?</h2>
+      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua aute irure dolor in reprehenderit velit.</p>
+      <form class="flow">
+        <div class="row">
+          <div>
+            <label for="name">Nombre</label>
+            <input class="input-custom" type="text" name="name" id="name" required>
+          </div>
+          <div>
+            <label for="lastname">Apellido</label>
+            <input class="input-custom" type="text" name="lastname" id="lastname" required>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label for="email">Correo electrónico</label>
+            <input class="input-custom" type="email" name="email" id="email" required>
+          </div>
+          <div>
+            <label for="phone">Teléfono</label>
+            <input class="input-custom" type="tel" name="phone" id="phone" required>
+          </div>
+        </div>
+        <div class="row">
+          <textarea class="textarea-custom" name="message" id="message"></textarea>
+        </div>
+        <button class="btn">Enviar</button>
+      </form>
+    </div>
+    <div class="container-right">
+      <figure>
+        <img src="/assets/home/escarabajo-fugaz.webp" alt="Auto Escarabajo">
+      </figure>
+    </div>
+  </div>
+</section>
