--- a/src/app/list-cars/components/listCars/list-cars-page.component.css
+++ b/src/app/list-cars/components/listCars/list-cars-page.component.css
@@ -35,6 +35,11 @@
   gap: 1rem;
 }
 
+.card-car-body {
+  display: flex;
+  justify-content: center;
+}
+
 .ocupantes, .car-tipo {
   gap: 0.3rem;
   padding-inline: 0.75rem;
