--- a/src/app/home/ui/home.component.html
+++ b/src/app/home/ui/home.component.html
@@ -123,11 +123,31 @@
   </div>
 </section>
 
-<section class="banner">
-  <div class="wrapper">
-    <div class="content">
-      <h2 class="title-banner">Spartan Motors</h2>
-      <p class="paragraph">Empresa lider en importaciones para automóviles</p>
+<section class="testimonials">
+  <div class="wrapper flow">
+    <div class="texts">
+      <h2 class="title">Testimonios</h2>
+      <p class="paragraph">Ut sapien eros, tincidunt enim amet id sociis aliqua velit auctor mauris quamol donec id ac
+        sed ultricies
+        aliquam aliquet quis imperdiet in enim mi at nibh</p>
+    </div>
+    <div class="grid-testimonials">
+      @for (testimonial of listTestimonials; track $index) {
+      <div [className]="testimonial.grid_span + ' testimonial'">
+        <div class="testimonial-text">
+          <div class="text-hidden">
+            <img [src]="testimonial.photo" [alt]="testimonial.name">
+            <h3>{{ testimonial.name }}</h3>
+            <p>{{ testimonial.text }}</p>
+          </div>
+        </div>
+        <div class="logo-and-bg-video">
+          <video autoplay loop muted playsinline data-wf-ignore="true" data-object-fit="cover">
+            <source [src]="testimonial.background_image">
+          </video>
+        </div>
+      </div>
+      }
     </div>
   </div>
 </section>
