--- a/src/styles/_utilities.css
+++ b/src/styles/_utilities.css
@@ -129,7 +129,7 @@ textarea {
   outline: none;
 }
 
-.input-custom {
+.input-custom, .textarea-custom {
   width: 100%;
   background-color: transparent;
   color: var(--color-white);
@@ -153,9 +153,13 @@ textarea {
   }
 }
 
+.textarea-custom {
+  resize: none;
+}
+
 .row {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: var(--direction, column) var(--wrap, nowrap);
   align-items: flex-start;
   gap: 0.75rem;
 }
