Create titles of the opp-home.

--- a/src/app/home/ui/home.component.html
+++ b/src/app/home/ui/home.component.html
@@ -34,6 +34,12 @@
 
 <section class="content-cards">
   <div class="wrapper">
+    <div class="texts">
+      <h2 class="title">Conócenos</h2>
+      <p class="paragraph">Ut sapien eros, tincidunt enim amet id sociis aliqua velit auctor mauris quamol donec id ac
+        sed ultricies
+        aliquam aliquet quis imperdiet in enim mi at nibh</p>
+    </div>
     <ul id="cards">
       <li class="card" id="card_1" style="--index:1">
         <div class="card_content">
