--- a/src/app/home/ui/home.component.html
+++ b/src/app/home/ui/home.component.html
@@ -49,12 +49,6 @@
               molestias,
               ab, reiciendis illo repellat iure est corporis sunt nemo. Praesentium corrupti, doloremque a veritatis
               pariatur placeat!</p>
-            <button class="boton-1">
-              <span class="texto-boton">Hola</span>
-            </button>
-            <button class="boton-2">
-              <span class="texto-boton">Chau</span>
-            </button>
           </div>
           <figure>
             <img src="https://scroll-driven-animations.style/demos/stacking-cards/shared/img-1.jpg"
@@ -70,12 +64,6 @@
               molestias,
               ab, reiciendis illo repellat iure est corporis sunt nemo. Praesentium corrupti, doloremque a veritatis
               pariatur placeat!</p>
-            <button class="boton-1">
-              <span class="texto-boton">Hola</span>
-            </button>
-            <button class="boton-2">
-              <span class="texto-boton">Chau</span>
-            </button>
           </div>
           <figure>
             <img src="https://scroll-driven-animations.style/demos/stacking-cards/shared/img-2.jpg"
@@ -91,12 +79,6 @@
               molestias,
               ab, reiciendis illo repellat iure est corporis sunt nemo. Praesentium corrupti, doloremque a veritatis
               pariatur placeat!</p>
-            <button class="boton-1">
-              <span class="texto-boton">Hola</span>
-            </button>
-            <button class="boton-2">
-              <span class="texto-boton">Chau</span>
-            </button>
           </div>
           <figure>
             <img src="https://scroll-driven-animations.style/demos/stacking-cards/shared/img-3.jpg"
@@ -112,12 +94,6 @@
               molestias,
               ab, reiciendis illo repellat iure est corporis sunt nemo. Praesentium corrupti, doloremque a veritatis
               pariatur placeat!</p>
-            <button class="boton-1">
-              <span class="texto-boton">Hola</span>
-            </button>
-            <button class="boton-2">
-              <span class="texto-boton">Chau</span>
-            </button>
           </div>
           <figure>
             <img src="https://scroll-driven-animations.style/demos/stacking-cards/shared/img-1.jpg"
@@ -153,6 +129,30 @@
           </video>
         </div>
       </div>
+      }
+    </div>
+  </div>
+</section>
+
+<section class="faqs">
+  <div class="wrapper">
+    <div class="texts">
+      <h2 class="title">Testimonios</h2>
+      <p class="paragraph">Ut sapien eros, tincidunt enim amet id sociis aliqua velit auctor mauris quamol donec id ac
+        sed ultricies
+        aliquam aliquet quis imperdiet in enim mi at nibh</p>
+    </div>
+    <div class="list-faqs flow">
+      @for (question of listFaqs; track $index) {
+        <details>
+          <summary>{{ question.question }}</summary>
+          <p>{{ question.answer }}</p>
+          <ul>
+            @for (li of question.list; track $index) {
+              <li>{{ li }}</li>
+            }
+          </ul>
+        </details>
       }
     </div>
   </div>
